tests/baselines/reference/parserMemberAccessorDeclaration18.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration18.ts(2,8): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration18.ts(2,12): error TS1053: A 'set' accessor cannot have rest parameter.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration18.ts (2 errors) ====
    class C {
       set Foo(...a) { }
           ~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
               ~~~
!!! error TS1053: A 'set' accessor cannot have rest parameter.
    }